# object-store-connector

./: .gitignore  README.md  metadata.json  metrics.yaml  pom.xml  pyproject.toml  ui-config.json
object_store_connector/: __main__.py  connector.py
object_store_connector/config/: config.yaml
object_store_connector/models/: object_info.py
object_store_connector/models/obsrv-labs/: issue-tracker#2: Cleanup
object_store_connector/provider/: azure.py  blob_provider.py  gcs.py  hdfs.py  s3.py
scripts/: build_dist.py
src/main/resources/: object-store-connector.conf
src/test/resources/: test.conf
tests/: batch_setup.py  create_tables.py  test_azure.py  test_s3.py
tests/config/: config.template.yaml
